--- a/src/documents/2019_wmp_fashion.html
+++ b/src/documents/2019_wmp_fashion.html
@@ -3,46 +3,70 @@
   <head>
     <meta charset="utf-8">
     <title>komi</title>
-    <link rel="stylesheet" href="../css/main.css">
+    <base href = "https://jinkyeom2.github.io/portfolio/" />
+    <!-- <base href = "/" /> -->
+    <link rel="https://cdn.rawgit.com/mfd/f3d96ec7f0e8f034cc22ea73b3797b59/raw/856f1dbb8d807aabceb80b6d4f94b464df461b3e/gotham.css">
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   </head>
 
   <body>
-
-    <nav>
-      <div class="header-menu">
-        <a href="javascript:history.back()" class="btn btn-primary">Back</a>
-      </div>
-    </nav>
-
-    <section class="container works">
-      <div class="single-intro">
-        <div class="single">
-          <img src="../images/test1.jpg" class="thumb-img">
-          <h1>위메프패션</h1>
+    <section class="container project pf_b">
+      <nav>
+        <div class="header-menu">
+          <a href="javascript:history.back()" class="btn btn-primary"><span><i class="icon_back"></i></span></a>
+        </div>
+      </nav>
+      <div class="img-wrapper">
+        <div class="img-cover">
+          <div class="img-inner">
+            <img src="images/projects_w2.jpg" class="main-img">
+          </div>
         </div>
       </div>
-
       <div class="box">
-
-        <table>
-          <tbody>
-              <tr>
-                  <td>위메프에 전문화된 패션 서비스가 필요. 매력적인 패션 상품을 한 곳에서 탐색할 수 있는 공간이 부족. 패션 디자인 담당으로 주도적으로 패션 서비스 UI를 변경 제안. 기존 여러개의 상품이 합쳐져 상품을 탐색하기 어려웠던 구조인 위메프 패션 서비스</td>
-                  <td>
-                    <ul>
-                      <li>- Web Mobile</li>
-                      <li>- Interaction Design, UI,UX Design (기여 100%)</li>
-                      <li>- Sketch, Protopie, Zeplin</li>
-                    </ul>
-                  </td>
-              </tr>
-          </tbody>
-        </table>
-        <div class="next">
-          next
-
+        <div class="script">
+          <div class="title-desc">
+            올리고, 매일매일 건강한
+          </div>
+          <div class="desc-box font">
+            <div class="desc">
+              위메프에 전문화된 패션 서비스가 필요. 매력적인 패션 상품을 한 곳에서 탐색할 수 있는 공간이 부족. 패션 디자인 담당으로 주도적으로 패션 서비스 UI를 변경 제안. 기존 여러개의 상품이 합쳐져 상품을 탐색하기 어려웠던 구조인 위메프 패션 서비스
+            </div>
+            <ul class="point">
+                <li>Web Mobile</li>
+            </ul>
+          </div>
+        </div>
+        <div class="contents font">
+          <div class="img-inner">
+            <img src="images/test1.jpg" class="desc-img">
+          </div>
+          <div class="desc">
+            설명설명설명설명설명설명설명설명설명설명설명설명설명설명설명설명설명설명설명설명설명설명설명설명설명설명설명설명설명설명설명설명설명설명설명설명설명설명설명설명설명설명설명설명설명설명설명설명설명설명설명설명설명설명설명설명설명설명설명설명
+          </div>
+          <div class="img-inner">
+            <img src="images/test1.jpg" class="desc-img">
+          </div>
         </div>
       </div>
     </section>
+    <footer>
+      <div class="bottom">
+        <ul class="contacts">
+          <li class="email">
+            <a href="mailto:jinkyeom2@gmail.com">Email</a>
+          </li>
+          <li class="instagram">
+            <a href="https://www.instagram.com/jinkyeom2/">Instagram</a>
+          </li>
+        </ul>
+        <div class="desc">
+          © 2020 JinkyeomLee
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
