--- a/src/documents/about.html
+++ b/src/documents/about.html
@@ -3,42 +3,208 @@
   <head>
     <meta charset="utf-8">
     <title>komi</title>
-    <link rel="stylesheet" href="../css/main.css">
+    <link rel="https://cdn.rawgit.com/mfd/f3d96ec7f0e8f034cc22ea73b3797b59/raw/856f1dbb8d807aabceb80b6d4f94b464df461b3e/gotham.css">
+
+    <base href = "https://jinkyeom2.github.io/portfolio/" />
+    <!-- <base href = "/" /> -->
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+
   </head>
 
   <body>
-
-    <nav>
-      <div class="header-menu">
-        <a href="javascript:history.back()" class="btn btn-primary">Back</a>
-        <!-- <div class="menu scroll"><a href="#projects">scroll</a></div> -->
-        <!-- <div class="menu"><a href="../index.html">Projects</a></div> -->
-        <!-- <div class="menu"><a href="../documents/about.html">About</a></div>
-        <div class="menu"><a href="mailto:jinkyeom2@gmail.com">Email</a></div> -->
-        <!-- <div class="menu"><a href="../documents/2019_wmp_fashion.html">Contacts</a></div> -->
-      </div>
-    </nav>
-
     <section class="container about">
-      <div class="img">
-        <img src="../images/komi2.jpg" class="thumb-img">
+      <nav>
+        <div class="header-menu">
+          <a href="javascript:history.back()" class="btn btn-primary"><span><i class="icon_back"></i></span></a>
+        </div>
+      </nav>
+      <div class="img-wrapper">
+        <div class="img-cover">
+          <div class="img-inner">
+            <img src="images/komi2.jpg" class="main-img">
+          </div>
+        </div>
       </div>
       <div class="box">
-        <a href="../documents/2019_wmp_fashion.html">
-          <h1>스타일핫딜</h1>
-        </a>
-        <dl class="contents">
-          <dt class="name">이진겸</dt>
-        </dl>
-        <dl class=contents>
-          현재 신사업 서비스 부문에서 패션분야와 관련된 다양한 서비스 출시를 경험하며 서비스 방향에 맞는 UX설계 및 UI디자인. 인터랙션 구현.</br>
-          신사업 서비스팀에서 다양한 서비스를 출시 실패하는 경험을 토대로 서비스에 대한 방향을 가지고 디자인할 수 있는 능력을 기름.</br>
-          신사업 패션서비스 디자인 담당자로 데이터를 기반으로 디자인할 수 있도록 노력 중.</br>
-          현재 웹모바일 서비스에 집중하고 있고, iOS 및 Android 앱 출시를 경험.</br>
-          스타트업에서 부동산 및 헬스케어 분야에서 서비스 기획 및 디자인을 담당하며</br>
-          반응형 웹서비스 및 iOS 및 Android 앱 출시.</br>
-          스타트업에서 문제에 스스로 학습하고 대처할 수 있는 능력 가짐.
-        </dl>
+        <div class="script">
+          <div class="title-desc">
+            이진겸
+          </div>
+          <div class="desc font">
+            UX.UI/Interaction Designer로 일하고 있습니다.</br>
+            서비스를 만드는 사람은 한명의 사용자가 되어야한다 생각합니다.</br>
+            서비스는 혼자 만들어가는 것이 아니기 때문에 같이 고민하고 커뮤니케이션하려고 노력합니다.</br>
+            만드는 사람들이 같이 고민해야 서비스가 발전하고, 일에 대한 성취감도 얻을 수 있다 생각합니다.</br>
+            같이 서비스에 집중하며 즐겁게 일하고 싶습니다.
+          </div>
+          <div class="link-btn">
+            <a href="https://docs.google.com/document/d/1T9EHOPkfHVBwXsisDRkApMjdBO1du4lktGB-x_Sm4mk/edit?usp=sharing">
+              Resume Download
+            </a>
+          </div>
+        </div>
+
+        <div class="contents">
+          <hr>
+          <div class="title-desc">
+            Education
+          </div>
+          <div class="desc-box font">
+            <div class="desc">
+              서울여자대학교 산업디자인학과 졸업
+            </div>
+            <ul class="point">
+                <li>2015 졸업</li>
+            </ul>
+          </div>
+        </div>
+
+        <div class="contents">
+          <hr>
+          <div class="title-desc">
+            Careers
+          </div>
+
+          <div class="desc-box font">
+            <div class="desc-box-inner">
+              <div class="desc">
+                위메프
+              </div>
+              <ul class="point">
+                  <li>2017년 - 현재</li>
+              </ul>
+            </div>
+            <div class="career-wrapper">
+              <div class="career-desc">
+                현재 전략부문에서 패션서비스를 만들고 있습니다. 다양한 패션 서비스를 출시하였습니다.</br>
+                소수의 서비스 중심으로 이루어진 팀에서 적은 인원 속에서 큰 가치를 창출하려고 노력합니다.</br>
+                패션 서비스를 담당하며 서비스 출시를 위한 아이데이션부터 서비스 문제를 정의하며 디자인에 반영합니다.
+              </div>
+              <div class="career-point">
+                UX.UI Design, Interaction Design, Prototype, wireframe</br>
+                Mobile web, iOS, Android
+              </div>
+            </div>
+            <div class="service">
+              <ul class="service-wrapper">
+                <li class="service-inner">
+                  <div class="list-title">위메프패션</div>
+                </li>
+                <li class="service-inner">
+                  <div class="list-title">룩북, 매일 새로운 트렌디한 스타일 룩북</div>
+                </li>
+                <li class="service-inner">
+                  <div class="list-title">스타일핫딜, 소호몰 핫딜 서비스</div>
+                </li>
+                <li class="service-inner">
+                  <div class="list-title">구매후기, 위메프 구매후기 모아보기</div>
+                </li>
+                <li class="service-inner">
+                  <div class="list-title">INCH”, 내 사이즈에 맞는 스타일 추천</div>
+                </li>
+              </ul>
+            </div>
+          </div>
+
+          <div class="desc-box font">
+            <div class="desc-box-inner">
+              <div class="desc">
+                이든이노베이션
+              </div>
+              <ul class="point">
+                  <li>2016년 - 2017년</li>
+              </ul>
+            </div>
+            <div class="career-wrapper">
+              <div class="career-desc">
+                건강관리 앱 서비스 출시를 위한 인사이트를 발견하고,
+                UI설계부터 디자인 전체를 담당하며 서비스를 출시하였습니다.</br>
+                퍼블리셔의 역할까지 담당하였습니다.
+              </div>
+              <div class="career-point">
+                UX.UI Design, Interaction Design, Prototype, wireframe, Publishing</br>
+                Web, Mobile Web, iOS, Android
+              </div>
+            </div>
+            <div class="service">
+              <ul class="service-wrapper">
+                <li class="service-inner">
+                  <div class="list-title">올리고, 매일 건강한 생활습관을 통한 다이어트 관리 앱</div>
+                </li>
+              </ul>
+            </div>
+          </div>
+
+          <div class="desc-box font">
+            <div class="desc-box-inner">
+              <div class="desc">
+                스테이즈, STAYES
+              </div>
+              <ul class="point">
+                  <li>2015년 - 2016년</li>
+              </ul>
+            </div>
+            <div class="career-wrapper">
+              <div class="career-desc">
+                중국인들을 상대로 한 서비스로 모바일/웹을 통해 O2O서비스를 강화하기 위한 개편이 진행하였습니다.</br>
+                UI설계부터 디자인까지 담당하였습니다.
+              </div>
+              <div class="career-point">
+                UX.UI Design, Interaction Design, Prototype, wireframe, Publishing</br>
+                Responsive Web
+              </div>
+            </div>
+            <div class="service">
+              <ul class="service-wrapper">
+                <li class="service-inner">
+                  <div class="list-title">홈페이지 개편, 방 검색서비스 강화</div>
+                </li>
+                <li class="service-inner">
+                  <div class="list-title">스테이즈 커머스, 중국인 유학생 상대로한 생활용품 샵</div>
+                </li>
+              </ul>
+            </div>
+          </div>
+
+        </div>
+
+        <div class="contents">
+          <hr>
+          <div class="title-desc">
+            Skills
+          </div>
+          <div class="desc-box font">
+            <div class="desc">
+              <ul>
+                <li>Graphic _  Sketch, Photoshop, Illustrator, Indesign,  After effects</li>
+                <li>Prototyping _  Protopie</li>
+                <li>Co-working _ Invision, Zeplin, Slack, Jira, Google Drive</li>
+                <li>Language _ HTML5, CSS3</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+
+        <div class="contents">
+          <hr>
+          <div class="title-desc">
+            Interest
+          </div>
+          <div class="desc-box font">
+            <div class="desc">
+              맛집, 수영, 필라테스, 스노우보드
+            </div>
+          </div>
+        </div>
+
+      </div>
+
+
+      <!-- <div class="box">
+
         <dl class=contents>
           <dt>Education</dt>
           <table>
@@ -164,9 +330,23 @@
               </tbody>
             </table>
         </dl>
-      </div>
+      </div> -->
 
     </section>
-
+    <footer>
+      <div class="bottom">
+        <ul class="contacts">
+          <li class="email">
+            <a href="mailto:jinkyeom2@gmail.com">Email</a>
+          </li>
+          <li class="instagram">
+            <a href="https://www.instagram.com/jinkyeom2/">Instagram</a>
+          </li>
+        </ul>
+        <div class="desc">
+          © 2020 JinkyeomLee
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
